--- a/everytime/everytime_second/css/style.css
+++ b/everytime/everytime_second/css/style.css
@@ -31,9 +31,9 @@ body {
   }
 
   input.signupbox {
-    border: 1px solid rgb(224, 62, 62);
+    border: 1px solid gray;
     border-radius: 20px;
-    background-color: rgb(224, 62, 62);
+    background-color: gray;
     width: 705px;
     height: 70px;
     font-size: 30px;
@@ -129,8 +129,8 @@ body {
   }
 
   input.signupbox {
-    background-color: rgb(224, 62, 62);
-    border: 1px solid rgb(224, 62, 62);
+    background-color: gray;
+    border: 1px solid gray;
     border-radius: 20px;
     color: white;
     font-size: 30px;
@@ -261,9 +261,9 @@ div.boxes {
 input.postbox {
   display: flex;
   justify-content: center;
-  border: 1px solid rgb(224, 62, 62);
+  border: 1px solid gray;
   border-radius: 15px;
-  background-color: rgb(224, 62, 62);
+  background-color: gray;
   width: 670px;
   height: 47px;
   padding-left: 20px;
@@ -304,9 +304,9 @@ input.postbox {
   input.postbox {
     display: flex;
     justify-content: center;
-    border: 1px solid rgb(224, 62, 62);
+    border: 1px solid gray;
     border-radius: 15px;
-    background-color: rgb(224, 62, 62);
+    background-color: gray;
     width: 97%;
     height: 47px;
     padding-left: 20px;
@@ -348,9 +348,9 @@ input.postbox {
   input.postbox {
     display: flex;
     justify-content: center;
-    border: 1px solid rgb(224, 62, 62);
+    border: 1px solid gray;
     border-radius: 15px;
-    background-color: rgb(224, 62, 62);
+    background-color: gray;
     width: 95%;
     height: 47px;
     padding-left: 20px;
