--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -34,7 +34,7 @@ input[type="password"] {
     border: 1px solid #F2F2F2
 }
 
-.lg {
+button[type="button"] {
     display: block;
     box-sizing: border-box;
     margin-top: 4px;
@@ -46,12 +46,12 @@ input[type="password"] {
     color: #FFFFFF;
     font-size: 16px;
     font-weight: bold;
-    background-color: #F91F15;
-    border: 1px solid #F91F15
 }
 
 .keep {
     color: #A6A6A6;
+    background-color: #F91F15;
+    border: 1px solid #F91F15;
 }
 
 .register {
@@ -76,6 +76,20 @@ div.container footer[copyright] {
 .copyright2 {
     font-weight: bold;
 }
+
+/* login.css */
+#user_lg {
+    background-color: #c2c2c2; /* 비활성화 상태의 색상 */
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+#user_lg.active {
+    background-color: #F91F15; /* 활성화 상태의 색상 */
+}
+
 
 /*780px 기준으로 전체적인 요소가 위 정렬, 입력창 크기 변경(화면에 꽉 차도록)*/
 @media all and (max-width : 780px) {
