[0517]회원가입 페이지 발전

--- a/everytime/css/signup.css
+++ b/everytime/css/signup.css
@@ -56,6 +56,6 @@ input[type="text"], input[type="password"] {
     color: #FFFFFF;
     font-size: 16px;
     font-weight: bold;
-    background-color: #F91F15;
-    border: 1px solid #F91F15
+    background-color: #c2c2c2;
+    border: none;
 }
