[05/18] 카운트다운, 에브리타임 발전

--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -95,7 +95,7 @@ body {
     width: 360px;
     height: 45px;
 
-    background-color: red;
+    background-color: rgb(210, 210, 210);
 
     color: white;
     font-size: 15px;
@@ -150,7 +150,7 @@ body {
     height: 45px;
     margin: 0;
 
-    background-color: red;
+    background-color: rgb(210, 210, 210);
 
     color: white;
     font-size: 15px;
