[0519]카운트 다운, 에브리타임 발전

--- a/everytime/css/signup.css
+++ b/everytime/css/signup.css
@@ -41,7 +41,7 @@ html {
 
 .signup-form button {
   color: white;
-  background-color: rgb(174, 41, 41);
+  background-color: gray;
   padding: 10px;
   border: none;
   border-radius: 10px;
