--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -34,7 +34,7 @@ html {
 
 .login-form button {
   color: white;
-  background-color: rgb(174, 41, 41);
+  background-color: gray;
   padding: 10px;
   border: none;
   border-radius: 10px;
