[0519] 카운트다운, 에브리타임 발전

--- a/everytime/css/sighup.css
+++ b/everytime/css/sighup.css
@@ -83,7 +83,7 @@ input {
 button {
   width: 370px;
   height: 35px;
-  background-color: #cf3821;
+  background-color: #dedede;
   border: none;
   border-radius: 12px;
   padding: 5px 10px 5px 10px;
@@ -93,6 +93,6 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background-color: #ae1700;
+button:disabled {
+  background-color: #cf3821;
 }
