--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -82,7 +82,7 @@ a:visited {
 button {
   width: 100%;
   height: 45px;
-  background-color: #cf3821;
+  background-color: #dedede;
   border: none;
   border-radius: 12px;
   padding: 5px 10px 5px 10px;
@@ -92,6 +92,6 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background-color: #ae1700;
+button:disabled {
+  background-color: #cf3821;
 }
