--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -26,7 +26,7 @@ img {
   justify-content: center;
 }
 
-.sec1 {
+form {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -46,27 +46,21 @@ img {
 
 .id,
 .password {
-  padding-left: 10px;
+  margin-top: 4px;
+  padding: 13px 10px;
   background-color: #f2f1f1;
 }
 
 .login {
-  text-align: center;
-  background-color: #d94423;
-}
-
-#text {
-  margin-top: 4px;
-  padding: 13px 5px;
-  background-color: #f2f1f1;
-}
-
-#login-text {
   margin-top: 2px;
   padding: 13px 5px;
   color: white;
   font-weight: bold;
   font-size: 15px;
+  background-color: #e1e1e1;
+}
+
+.login.active {
   background-color: #d94423;
 }
 
@@ -74,7 +68,6 @@ input {
   border: none;
   outline: none;
 }
-
 .sec2 {
   margin: 60px;
 }
@@ -109,7 +102,7 @@ li {
     width: 100vw;
   }
 
-  .sec1 {
+  form {
     width: 100vw;
   }
 }
