--- a/everytime/css/signup.css
+++ b/everytime/css/signup.css
@@ -42,7 +42,11 @@ h4 {
   font-weight: bold;
 }
 
-.content {
+.name,
+.id,
+.email,
+.password,
+.password2 {
   color: #979696;
   font-weight: 500;
   background-color: #f2f1f1;
@@ -57,7 +61,7 @@ p {
 }
 
 .submit {
-  background-color: rgb(217, 68, 35);
+  background-color: #e1e1e1;
   font-weight: bold;
   color: white;
   width: 400px;
@@ -65,6 +69,10 @@ p {
   border-radius: 10px;
   padding: 7px 5px;
   text-align: center;
+}
+
+.submit.active {
+  background-color: #d94423;
 }
 
 input {
