[0519]카운트다운, 에브리타임 발전

--- a/everytime/css/style_login.css
+++ b/everytime/css/style_login.css
@@ -40,8 +40,8 @@
   border-style: none;
   width: 100%;
 }
-.form > input.login {
-  background-color: #f91f15;
+.form > input#login {
+  background-color: #a6a6a6;
   font-weight: bold;
   color: #fff;
   font-size: 16px;
