--- a/everytime/css/style_signup.css
+++ b/everytime/css/style_signup.css
@@ -51,15 +51,16 @@ div.input > label {
   font-weight: bold;
 }
 
-.submit {
+#submit {
   display: block;
   box-sizing: border-box;
   border-radius: 12px;
-  background-color: #f91f15;
+  background-color: #a6a6a6;
   color: #fff;
   font-weight: bold;
   text-align: center;
   border-style: none;
   margin: 4px;
   padding: 10px;
+  width: 100%;
 }
