--- a/everytime/css/signup.css
+++ b/everytime/css/signup.css
@@ -39,7 +39,8 @@ input[type="submit"] {
   border: 0;
   border-radius: 0.7vw;
   margin: 1vw 0.2vw 0.2vw 0.2vw;
-  background-color: #f91f15;
+  /* background-color: #f91f15; */
+  background-color: #8e8b8b;
   color: white;
 }
 
