--- a/everytime/css/post.css
+++ b/everytime/css/post.css
@@ -1,15 +1,10 @@
-body,
-html {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .post-form {
-  border: 1px solid rgb(150, 150, 150);
+  border: 1px solid #d2d2d2;
   display: flex;
   flex-direction: column;
+  margin-top: 5px;
+  width: 50em;
 }
 
 #title:focus,
@@ -23,18 +18,18 @@ html {
 
 #title {
   padding: 10px;
-  width: 600px;
-  height: 20px;
+  width: auto;
+  height: 1.5em;
   border: none;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d2d2d2;
 }
 
 #text {
   padding: 10px;
-  width: 600px;
-  height: 300px;
+  width: auto;
+  height: 20em;
   border: none;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d2d2d2;
 }
 
 .form-control {
@@ -69,4 +64,10 @@ html {
 
 .checkbox {
   font-size: 12px;
+  font-weight: bold;
+}
+
+input[type="checkbox"]:checked {
+  accent-color: brown;
+  color :brown;
 }
