--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
 }
 
+.all {
+  width: 100vw;
+}
+
 .line {
   display: inline-block;
   height: 212px;
@@ -27,11 +31,12 @@ body {
   text-align: left;
   margin: 7px;
 }
+
 .nav_menu {
   box-sizing: border-box;
   height: 65px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: nowrap;
   white-space: nowrap;
   margin-bottom: 10px;
@@ -50,8 +55,11 @@ body {
   box-sizing: border-box;
   height: 70px;
 }
-.title {
-  width: 93px;
+#title {
+  /*width: 93px;*/
+  display: inline-block;
+
+  text-align: left;
 }
 .logo_img {
   height: 60%;
@@ -169,7 +177,10 @@ body {
   padding-left: 15px;
 }
 
-.write_box {
+#write_box {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
   background-color: #fafafa;
   border: 2.2px solid #dddddd;
   margin: 5px 0;
@@ -177,26 +188,32 @@ body {
 
 .write {
   box-sizing: border-box;
+  width: 700px;
   font-size: 14px;
   height: 45px;
   padding-left: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #fafafa;
+  font-weight: 500;
+  color: #bababa;
 }
 
-.write p {
-  color: #cfcfcf;
-  width: 80%;
-  margin-right: 10px;
-  justify-content: left;
-}
-
-.pencil {
+.writebox-pencil {
   width: 40px;
   height: 40px;
   margin-top: 3px;
   justify-content: right;
+}
+
+#postContent > .secBox {
+  width: 100%;
+}
+
+#postContent {
+  display: none;
+  margin-bottom: 5px;
 }
 
 .posting {
@@ -230,6 +247,7 @@ body {
 
 .main {
   display: flex;
+  width: 100%;
   justify-content: center;
 }
 
@@ -455,4 +473,128 @@ body {
   font-weight: 400;
   color: #535252;
   margin: 0;
+}
+
+body {
+  box-sizing: content-box;
+  display: flex;
+  justify-content: center;
+}
+
+.secBox {
+  border: 3px solid #e7e7e7;
+  width: 700px;
+}
+
+.sec1 {
+  border: 1px solid #e7e7e7;
+  height: 45px;
+}
+
+.title {
+  font-weight: bold;
+  margin: 10px;
+}
+
+.sec2 {
+  height: 410px;
+  border: 1px solid #e7e7e7;
+  margin-top: -1px;
+}
+
+.title {
+  font-size: 16px;
+  width: 650px;
+  margin: 15px;
+}
+
+.content {
+  font-size: 14px;
+  margin: 15px;
+  width: 650px;
+}
+
+#notice {
+  padding: 15px;
+  height: 35px;
+  border: 1px solid #e7e7e7;
+  margin-top: -1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+#notice > p {
+  font-size: 12px;
+  color: #1fb5b5;
+  background-color: #efffff;
+  border-radius: 10px;
+  padding: 10px;
+  width: 98%;
+  height: 85%;
+}
+
+span {
+  font-weight: bold;
+}
+.sec3 {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  border: 1px solid #e7e7e7;
+  margin-top: -1px;
+}
+
+.right {
+  display: flex;
+}
+
+img {
+  height: 40px;
+}
+
+.checkbox1 {
+  display: flex;
+  width: 50px;
+  accent-color: #05a0a0;
+}
+
+#check_q:checked + .check1_q {
+  color: #05a0a0;
+}
+
+.checkbox2 {
+  display: flex;
+  width: 50px;
+  accent-color: #d94423;
+}
+.checkbox1 > p,
+.checkbox2 > p {
+  font-size: 11px;
+  font-weight: bolder;
+  margin-top: 12px;
+  color: #959494;
+}
+
+.check1,
+.check1_q {
+  font-size: 11px;
+  font-weight: bolder;
+  margin-top: 12px;
+  color: #959494;
+}
+
+#check:checked + .check1 {
+  color: #d94423;
+}
+
+.pencil {
+  background-color: #d94423;
+  margin: 0;
+}
+
+input {
+  border: none;
+  outline: none;
 }
