--- a/everytime/css/post.css
+++ b/everytime/css/post.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +13,13 @@ body {
 }
 
 input[type="text"] {
+  border: none;
+  outline: none;
+  padding-block: 0px;
+  padding-inline: 0px;
+}
+
+textarea {
   border: none;
   outline: none;
   padding-block: 0px;
@@ -42,6 +48,7 @@ input[type="text"] {
 }
 
 #main {
+  resize: none;
   padding: 0;
   width: 100%;
   height: 100%;
@@ -50,12 +57,9 @@ input[type="text"] {
   overflow-wrap: anywhere;
 }
 
-#main::placeholder {
+textarea::placeholder {
   font-size: 15px;
   color: #242424;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .post {
